...
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@{selected.quantity}"
            android:textColor="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@+id/remove_product_button"
            app:layout_constraintEnd_toStartOf="@+id/remove_product_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/selected_product_name"
            app:layout_constraintTop_toTopOf="@+id/remove_product_button"
            tools:text="x2" />

...
