...
            <TextView
                android:id="@+id/product_price_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/add_product_image"
                app:layout_constraintEnd_toStartOf="@+id/add_product_image"
                app:layout_constraintStart_toEndOf="@+id/product_name_text"
                app:layout_constraintTop_toTopOf="@+id/add_product_image"
                android:text="@{product.price}"
                tools:text="5€" />

...
